# repologogen

./: .config.yaml.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
scripts/: install_codex_skill.py
skills/repologogen/: SKILL.md
skills/repologogen/agents/: openai.yaml
src/repologogen/: __init__.py  cli.py  config.py  default_config.json  detector.py  generator.py  planner.py  processor.py
tests/: __init__.py  test_cli.py  test_config.py  test_detector.py  test_generator.py  test_planner.py  test_processor.py
